--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 	</head>
 	<body class="user-logged-in">
 		<sway-app>Loading...</sway-app>
+		<script src="/static/vendor.js"></script>
 		<script src="/static/app.js"></script>
 	</body>
 </html>
