--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
 		<script src="/static/js/amcharts/amcharts.js"></script>
 		<script src="/static/js/amcharts/pie.js"></script>
 		<script src="/static/js/amcharts/serial.js"></script>
-		<script src="/static/js/amcharts/plugins/export/export.js"></script>
 		<script src="/static/js/amcharts/themes/light.js"></script>
 		<!-- end amCharts include-->
 	</head>
@@ -56,5 +55,17 @@
 		<script src="/static/js/initChartData.js" defer></script>
 		<script src="/static/vendor.js" defer></script>
 		<script src="/static/app.js" defer></script>
+		<script src="https://code.jquery.com/jquery-3.1.0.slim.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.0-rc.2/Chart.bundle.min.js"></script>
+		<script src="https://rawgit.com/chartjs/Chart.Zoom.js/master/Chart.Zoom.min.js"></script>
+		<script>
+			setTimeout(function() {
+				initChartData();
+				initChartData2();
+				// initChart();
+				// gimmeLines();
+				// gimmePie();
+			}, 1000)
+		</script>
 	</body>
 </html>
