woohoo do templates better woohoo

--- a/index.html
+++ b/index.html
@@ -29,9 +29,18 @@
 		<!-- end amCharts include-->
 	</head>
 	<body class="user-logged-in">
-		<div class="grid-container page">
 		<sway-app>Loading...</sway-app>
-		</div>
+		<!--<div class="grid-container page">
+			<user-header [user]="user"></user-header>
+			<div class="block-section" id="page-content">
+				<div class="grid-100 grid-parent">
+					<left-nav></left-nav>
+					<sway-app>Loading...</sway-app>
+					<div class="clearfix"></div>
+				</div>
+			</div>
+			<user-footer></user-footer>
+		</div>-->
 		<script id="intercom">
 			(function(){var w=window;var ic=w.Intercom;if(typeof ic==='function'){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/gtphmh27';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()
 		</script>
