--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<link rel="stylesheet" href="/static/assets/stylesheets/ie.css" />
 		<![endif]-->
 
-		<link rel="stylesheet" href="/static/css/flat-ui.css">
+		<link rel="stylesheet" href="/static/css/flat-ui.min.css">
+		<link rel="stylesheet" href="/static/css/select2.min.css">
 		<link rel="stylesheet" href="/static/css/style.css">
 		<link rel="stylesheet" href="/static/css/progressbar.css">
 		<link rel="stylesheet" href="/static/css/main.css">
