use infAppUrl from the template

--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
 		<script src="https://swayops.agilecrm.com/stats/min/agile-min.js"></script>
 		<script>_agile.set_account('6pkbc1hr4is67i7v165f554tuj', 'swayops'); _agile_execute_web_rules();</script>
 		<script src="/static/js/initChartData.js" defer></script>
+		<script>
+			var appSettings = {
+				infAppUrl: '{{ infAppUrl }}',
+			};
+		</script>
 		<script src="/static/vendor.js" defer></script>
 		<script src="/static/app.js" defer></script>
 	</body>
