--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 		<!--[if (gt IE 8) | (IEMobile)]><!-->
-		<link rel="stylesheet" href="/static/assets/stylesheets/unsemantic-grid-responsive.css" />
+		<link rel="stylesheet" href="/static/css/unsemantic-grid-responsive.css" />
 		<!--<![endif]-->
 		<!--[if (lt IE 9) & (!IEMobile)]>
-		<link rel="stylesheet" href="/static/assets/stylesheets/ie.css" />
+		<link rel="stylesheet" href="/static/css/ie.css" />
 		<![endif]-->
 
 		<link rel="stylesheet" href="/static/css/flat-ui.min.css">
