--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<link rel="stylesheet" href="/static/css/main.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&amp;lang=en" />
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700&amp;lang=en" />
+		<script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 
 		<!--amCharts include -->
 		<link rel="stylesheet" href="/static/js/amcharts/plugins/export/export.css">
